force-app/main/default/objects/Pricebook2/fields/DefaultProduct__c.field-meta.xml
<CustomField>
    <fullName>DefaultProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>What is the default Product for this Pricebook?</inlineHelpText>
    <label>Default Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Price Books</relationshipLabel>
    <relationshipName>PriceBooks_Default</relationshipName>
    <type>Lookup</type>
</CustomField>