force-app/main/default/objects/Pricebook2/fields/DoesNotHavePricing__c.field-meta.xml
<CustomField>
    <fullName>DoesNotHavePricing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if this price book does not have any pricing setup.</inlineHelpText>
    <label>Does Not Have Pricing?</label>
    <type>Checkbox</type>
</CustomField>