force-app/main/default/objects/Pricebook2/fields/Quote_User__c.field-meta.xml
<CustomField>
    <fullName>Quote_User__c</fullName>
    <inlineHelpText>Is this price book being used with a quoting tool?</inlineHelpText>
    <label>Quote User</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Steelbrick</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>