force-app/main/default/objects/Pricebook2/fields/Sales_Division__c.field-meta.xml
<CustomField>
    <fullName>Sales_Division__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Comma separated list of sales divisions valid for this Pricebook. This is the primary determination when assigning a pricebook.</inlineHelpText>
    <label>Sales Divisions</label>
    <length>250</length>
    <type>Text</type>
</CustomField>