force-app/main/default/objects/Pricebook2/fields/Sales_Org2__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>A secondary sales org used for querying the records.</inlineHelpText>
    <label>Sales Org2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>