force-app/main/default/objects/Pricebook2/fields/Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The primary sales org this pricebook is used for</inlineHelpText>
    <label>Sales Org</label>
    <length>40</length>
    <type>Text</type>
</CustomField>