force-app/main/default/objects/Pricebook2/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>PRICEBOOK2.NAME</columns>
    <columns>Sales_Org__c</columns>
    <columns>PRICEBOOK2.DESCRIPTION</columns>
    <columns>Short_Name__c</columns>
    <columns>PRICEBOOK2.LAST_UPDATE</columns>
    <columns>PRICEBOOK2.IS_ACTIVE</columns>
    <columns>Primary__c</columns>
    <columns>Quote_User__c</columns>
    <columns>Sales_Org2__c</columns>
    <columns>Sales_Division__c</columns>
    <columns>DefaultProduct__c</columns>
    <columns>PRICEBOOK2.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>