force-app/main/default/objects/Pricebook2/listViews/All_Assignment_Detail.listView-meta.xml
<ListView>
    <fullName>All_Assignment_Detail</fullName>
    <columns>PRICEBOOK2.NAME</columns>
    <columns>PRICEBOOK2.DESCRIPTION</columns>
    <columns>Sales_Org__c</columns>
    <columns>Sales_Org2__c</columns>
    <columns>Sales_Division__c</columns>
    <columns>Pilot__c</columns>
    <columns>Quote_User__c</columns>
    <columns>Short_Name__c</columns>
    <columns>Primary__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRICEBOOK2.IS_ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All - Assignment Detail</label>
</ListView>